🐛Fixed run button disappeared on mobile #25

--- a/frontend/src/assets/style/Playground.css
+++ b/frontend/src/assets/style/Playground.css
@@ -22,6 +22,7 @@
     font-family: 'Courier New', Consolas, 'Lucida Console', monospace;
     unicode-bidi: plaintext;
     text-rendering: optimizeSpeed;
+    margin-bottom: 3rem;
 }
 
 .react-select-container {
